#pragma once

#include <vector>

class Player;

class TurnManager {
private:
    int currentTurn;
    int maxTurn;
    int activePlayerIndex;
    
    std::vector<Player*> turnOrder;

public:
    explicit TurnManager(int maxTurn = 100);
    ~TurnManager() = default;

    void setTurnOrder(const std::vector<Player*>& players);
    void addPlayerToOrder(Player* player);
    void resetTurns();

    void nextTurn();
    Player* getCurrentPlayer();

    int getCurrentTurn() const;
    int getActivePlayerIndex() const;
    const std::vector<Player*>& getTurnOrder() const;

    bool isGameOver() const;
    std::vector<Player*> determineWinner();
};